@@ -48,6 +48,9 @@ Note: nocolor use Bold and Italic fonts. TextOnly remove all special caracters a
   Specify the folder where yaourt export built packages for local repository
 This option export .pkg.tar.gz + PKGBUILD + local sources files.
 
+.B ForceEnglish
+  If set to "yes", yaourt use English for makepkg and pacman instead of system language.
+
 .B LastCommentsNumber
   Show X last comments for packages built from AUR Unsupported.
   default: LastCommentsNumber 5
