@@ -104,3 +104,4 @@ yaourt 0.9.1 (pending)
 - some code rewrite for AUR (access by JSON RPC interface)
 - yaourt -Su --aur now show packages flaged by another user as out of date
 - bug fixed when building a package with text in name (like per-text-kakaso)
+- new option ForceEnglish in yaourtrc
